<resources>
    <string name="app_name" translatable="false">Shopmate</string>
    <string name="web_client_id" translatable="false">544701638538-ccp0cp41t4r10ofpl8biku4ckh457hm8.apps.googleusercontent.com</string>


    <!-- ERROR MESSAGES -->
    <string name="errNoBoardFound">¡No tienes ningún tablero creado!</string>
    <string name="errNoCardFoundBoard">¡No tienes ninguna lista creada en este tablero!</string>
    <string name="errNoCardFoundAll">¡No tienes ninguna lista creada!</string>
    <string name="errGeneral">¡Algo ha ido mal!</string>
    <string name="errEmpty">¡No hay nada aquí!</string>
    <string name="errEmptyCards">¡No hay ninguna lista aquí!</string>
    <string name="errEmptyBoards">¡No hay ningun tablero aquí!</string>
    <string name="errEmptyExtra">¡Oh, no hay nada aquí!</string>

    <string name="errNameInvalid">Escribe un nombre válido</string>
    <string name="errEmailInvalid">Escribe un correo electrónico válido</string>
    <string name="errUsernameInvalid">Escribe un nombre de usuario válido</string>
    <string name="errPasswordNotEqual">Las contraseñas no coinciden</string>

    <!-- ACTIONS MESSAGES -->
    <string name="actionCreateNewBoard">Crear un nuevo tablero</string>
    <string name="actionCreateNewCard">Crear una nueva lista</string>

    <!-- INFORMATION MESSAGES -->
    <string name="infoCreateBoard">Crear tablero nuevo</string>
    <string name="infoCreateCard">Crear lista nueva</string>

    <!-- GENERAL TEXTS -->
    <string name="next">Siguiente</string>
    <string name="back">Volver</string>
    <string name="cancel">Cancelar</string>
    <string name="go">Ir</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="create">Crear</string>
    <string name="add">Añadir</string>
    <string name="update">Actualizar</string>
    <string name="retry">Reintentar</string>

    <!-- HINT MESSAGES -->
    <string name="hintBoardName">Nombre del tablero</string>
    <string name="hintCardName">Nombre de la lista</string>


    <string name="iconStr" translatable="false">Icon</string>

    <string name="hintUser">Escribe tu nombre</string>
    <string name="hintUsername">Escribe tu usuario</string>
    <string name="hintEmail">Escribe tu mail</string>

    <string name="labelEmail">¿Cúal es tú dirección de correo?</string>
    <string name="labelUsername">¿Cúal será tu nombre de usuario?</string>
    <string name="hintPassword">Escribe tu contraseña</string>
    <string name="hintConfirmPassword">Confirmar contraseña</string>

    <string name="labelForgotPassword">¿Has olvidado tú contraseña?</string>
    <string name="msgForgotPassword">Ingrese su correo electrónico registrado para restablecer la contraseña</string>


    <!-- BUTTONS -->
    <string name="btnNext">Siguiente</string>
    <string name="btnSave">Guardar</string>
    <string name="btnConfirm">Confirmar</string>


    <!-- LOGIN ACTIVITY -->
    <string name="strLogin">Inciar sesión</string>
    <string name="strLoginrSeparator">O continuar con</string>
    <string name="strLoginBottomForgotPassword"><u>¿Recuperar contraseña?</u></string>
    <string name="strLoginBottomRegister">¿Nuevo usuario? <u>Regístrate</u></string>

    <!-- REGISTER ACTIVITY -->
    <string name="strRegister">Registro</string>
    <string name="strRegisterSeparator">O registrate con</string>
    <string name="strRegisterBottomHaveAccount">¿Ya tienes cuenta? <u>Incia sesión</u></string>

    <!-- FORGOT PASSWORD ACTIVITY -->
    <string name="strForgotPassword">Recuperar Contraseña</string>
    <string name="strForgotPasswordBottomReminder">¿Recuerdas la contraseña? <u>Incia sesión</u></string>
    <string name="btnResetLink">Enviar enlace de reinicio</string>

    <!-- REGISTER STEPS FRAGMENTs -->
    <string name="strProfileStep">Tú perfil</string>
    <string name="strSecurityStep">Seguridad</string>
    <string name="strUsername">Tú nombre de usuario</string>

    <!-- USER PROFILE -->
    <string name="strProfile">Perfil</string>


    <!-- GENERAL USES -->
    <string name="strFacebook">Facebook</string>
    <string name="strGoogle">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strSave">Guardar</string>
    <string name="strProfileSettings">Ajustes</string>


    <string name="strHome">Home</string>
    <string name="strTemplate">Templates</string>
    <string name="strSearch">Search</string>
    <string name="txtZero">0</string>
    <string name="cdErrImg">Error Image</string>
    <string name="cdEmptyImage">Empty image</string>
    <string name="at">\@</string>
    <string name="errNoBoardFoundSearch">No se ha encontrado ningun resultado :(</string>
    <string name="full_screen_image">Click to open the image to see it</string>
    <string name="blurry_background">Blurry Background</string>


</resources>