<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorForegroundInverse"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.login.RegisterSecurityFragment">



<com.google.android.material.textview.MaterialTextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height"
    android:fontFamily="@font/poppins_medium"
    android:gravity="center"
    android:padding="5dp"
    android:text="@string/strSecurityStep"
    android:textAlignment="center"
    android:textColor="?android:attr/colorForeground"
    android:textSize="@dimen/defaultTextSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />




<!-- PASSWORD EDITEXT -->
<LinearLayout
    android:id="@+id/lytEtPassword"
    android:layout_width="@dimen/maxWidth"
    android:layout_height="@dimen/height"
    android:layout_marginTop="100dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textView">

    <RelativeLayout
        android:layout_width="@dimen/height"
        android:layout_height="@dimen/height"
        android:gravity="center"
        android:background="@drawable/custom_bg_icon">
        <ImageView
            android:layout_width="@dimen/iconMiddleSize"
            android:layout_height="@dimen/iconMiddleSize"
            android:contentDescription="@string/iconStr"
            android:src="@drawable/lock"
            app:tint="#ffffff" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="270dp"
        android:layout_height="50dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textColorHint="?attr/colorOnPrimaryContainer"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<!-- CONFIRM PASSOWRD EDITEXT -->
<LinearLayout
    android:id="@+id/lytEtConfirmPassword"
    android:layout_width="@dimen/maxWidth"
    android:layout_height="@dimen/height"
    android:layout_marginTop="@dimen/defaultMargin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lytEtPassword">

    <RelativeLayout
        android:layout_width="@dimen/height"
        android:layout_height="@dimen/height"
        android:background="@drawable/custom_bg_icon"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/iconMiddleSize"
            android:layout_height="@dimen/iconMiddleSize"
            android:contentDescription="@string/iconStr"
            android:src="@drawable/lock"
            app:tint="#ffffff" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPasswordLayout"
        android:layout_width="270dp"
        android:layout_height="50dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textColorHint="?attr/colorOnPrimaryContainer"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hintConfirmPassword"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnSave"
    android:layout_width="@dimen/maxWidth"
    android:layout_height="@dimen/height"
    android:layout_marginTop="@dimen/defaultMargin"
    android:text="@string/btnSave"
    android:insetBottom="0dp"
    android:insetTop="0dp"
    android:textSize="@dimen/defaultTextSize"
    android:textColor="?android:attr/colorForegroundInverse"
    android:fontFamily="@font/poppins_bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lytEtConfirmPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>